Se agrega navbar transparente a Estructura basica

--- a/index.html
+++ b/index.html
@@ -30,8 +30,32 @@
     <!-- ********************************************************************************************************************************************** -->
     
     <!-- NavBar Transparente sobre Carousel -->
-    <nav>
-        <h1>Navbar</h1>
+    <nav class="container-xxl navbar navbar-expand-lg fixed-top py-2 mt-2">
+        <div class="container navbar-dark px-xxl-5">
+            <a class="navbar-brand" href="#">
+                <img src="assets/img/viajes.svg" alt="" width="35" height="28" class="d-inline-block align-text-bottom">
+                <span>Viajes Chile</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#quienessomos">Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#destacados">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#contacto">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     
     <!-- Header con Carousel, comienza a rotar luego de cambiar foto por primera vez -->
