--- a/index.html
+++ b/index.html
@@ -35,8 +35,28 @@
     </nav>
     
     <!-- Header con Carousel, comienza a rotar luego de cambiar foto por primera vez -->
-    <header>
-        <h1>Header</h1>
+    <header class="container-xxl bg-dark px-0">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/carousel1.jpg" class="d-block w-100" data-bs-toggle="tooltip" data-bs-title="Llamas en Altiplano Chileno" alt="carousel1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel2.jpg" class="d-block w-100" data-bs-toggle="tooltip" data-bs-title="Rapa Nui" alt="carousel2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel3.jpg" class="d-block w-100" data-bs-toggle="tooltip" data-bs-title="Pingüino Magallánico, Isla Magdalena, Chile" alt="carousel3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>  
     </header>
     
     <!-- Secciones de la Pagina -->
