--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </div>
 
                 <!-- Button Trigger Modal -->
-                <button type="submit" class="btn btn-info text-white" data-bs-toggle="modal" data-bs-target="#enviarModal">Enviar</button>
+                <button type="button" class="btn btn-info text-white" data-bs-toggle="modal" data-bs-target="#enviarModal">Enviar</button>
 
                 <!-- enviarModal -->
                 <div class="modal" id="enviarModal">
